<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">camtest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="xcoor">xcoor</string>
	<string name="ycoor">ycoor</string>
	<string name="zcoor">zcoor</string>
	<string name="soundLev">soundLev</string>
	<string name="lightLev">lightLev</string>
	<string name="magLev">magLev</string>

</resources>